# sedg14pp

./: .gitignore  CMakeLists.txt  README.md  array.c  main.c  main.cpp  parseTreeInput.txt  simd.cpp
Exercises/Ch 01/: 01. txt  02. txt  03. txt  04. txt  05. txt  06. txt  08. txt  09. txt  10. txt
Exercises/Ch 02/: 01. txt  02. txt  04. txt  05. txt  06. txt  07. txt  08. txt  09. txt  10. txt
Exercises/Ch 03/: 01. txt  02. txt  03. txt  04. txt  05. txt  06. txt  07. txt  08. txt  09. txt  10. txt
Exercises/Ch 04/: 01. txt  02. txt  03. txt  04. txt  05. txt  06. txt  08. txt  09. txt  10. txt
Exercises/Ch 05/: 01. txt  02. txt  03. txt  04. txt  05. txt  06. txt  07. txt  08. txt  09. txt  10. txt
Exercises/Ch 06/: 01. txt  02. txt  03. txt  04. txt  05. txt  06. txt  07. txt  08. txt  09. txt  10. txt
Exercises/Ch 07/: 01. txt  02. txt  03. txt  04. txt  05. txt  06. txt  07. txt  08 .txt  09. txt  10. txt
Snippets/: 01. gcd.c  01. gcd.cpp  03. fraction.c  03. fraction.cpp  04. convert.c  04. convert.cpp  05. binary.c  05. binary.cpp  06. greatestInts.c  06. greatestInts.cpp  06. greatest_ints.c  07. gcd.bas  08. sieve.c  08. sieve.cpp  09. l_list.c  09. linkedList.cpp  09. linked_list.c  09. llist.c  09a. mass_suicide.c  10. p_array.c  10. parallelArray.cpp  10. parallel_array.c  10. parray.c  11. stack.c  11. stackL.cpp  11. stack_ll.c  11a. postfix.c  12. arrayStack.c  12. array_stack.c  12. stackA.cpp  12. stack_a.c  13. queue.c  13. queue.cpp  13. queue_a.c  13. queue_ll.c  14. 2DArray.cpp  14. 2d.c  15. dl_list.c  15. dllist.c  15. doublyLinkedList.cpp  (+12 more)
Snippets/00. Includes/array/: array.h
Snippets/00. Includes/dll node/: dll_node.c  dll_node.h
Snippets/00. includes/: allocMacros.h  alloc_macros.h  array_macros.h  errorMacros.h  errorMacros.hpp  macros.h  runningTime.hpp  runningTimeMacros.h  runningTimeMacros.hpp  treeNodeDataType.h  tree_node_data_type.h  types.hpp
Snippets/01. gcd/: 01. gcd.c  01. gcd.cpp  01. gcd.h  01. gcd.hpp  07. gcd.bas
Snippets/02. gcdp/: 02. gcdPascal.txt
Snippets/03. fraction/: 03. fraction.c  03. fraction.cpp  03. fraction.h  03. fraction.hpp
Snippets/04. convert/: 04. convert.c  04. convert.cpp  04. convert.h  04. convert.hpp
Snippets/05. binary/: 05. binary.c  05. binary.cpp  05. binary.h  05. binary.hpp
Snippets/06. greatest ints/: 06. greatestInts.c  06. greatestInts.cpp  06. greatestInts.hpp  06. greatest_ints.c  06. greatest_ints.h
Snippets/08. sieve/: 08. sieve.c  08. sieve.cpp  08. sieve.h  08. sieve.hpp
Snippets/09. linked list/: 09. linkedList.cpp  09. linkedList.hpp  09. linkedListGT.cpp  09. linkedListGT.hpp  09. linked_list.c  09. linked_list.h  09. list.c
Snippets/09. list/: 09. list.c  09. list.h  09. listDL.c  09. listDL.h
Snippets/09a. mass suicide/: 09a. massSuicide.cpp  09a. massSuicide.hpp  09a. mass_suicide.c  09a. mass_suicide.cpp  09a. mass_suicide.h
Snippets/10. parallel array/: 10. parallelArray.cpp  10. parallelArray.hpp  10. parallel_array.c  10. parallel_array.h
Snippets/10. parray/: 10. parray.c  10. parray.h
Snippets/11. stack/: 11. stack.cpp  11. stack.hpp  11. stackA.cpp  11. stackA.hpp  11. stackL.cpp  11. stackL.hpp  11. stackLF.cpp  11. stackLF.hpp  11. stackPA.cpp  11. stackPA.hpp
Snippets/11. stack linked list/: 11. stack_ll.c  11. stack_ll.h
Snippets/11. stackL/: 11. stackL.cpp  11. stackL.hpp
Snippets/11a. postfix/: 11a. postfix.c  11a. postfix.h
Snippets/12. stack/: 12. stackArray.c  12. stackArray.h  12. stackLL.c  12. stackLL.h  12. stackPA.c  12. stackPA.h
Snippets/12. stack array/: 12. stackArray.h  12. stack_a.c  12. stack_a.h
Snippets/12. stackA/: 12. stackA.cpp  12. stackA.hpp
Snippets/12a. postfix/: 12a. postfix.cpp  12a. postfix.hpp
Snippets/13. queue/: 13. queue.cpp  13. queue.hpp  13. queueA.cpp  13. queueA.hpp  13. queueArray.c  13. queueArray.h  13. queueL.cpp  13. queueL.hpp  13. queueLL.c  13. queueLL.h
Snippets/13. queue array/: 13. queue_a.c  13. queue_a.h
Snippets/14. 2D array/: 14. 2DArray.cpp  14. 2DArray.hpp
Snippets/14. 2d/: 14. 2d.c  14. 2d.h
Snippets/15. doubly linked list/: 15. dl_list.c  15. dl_list.h  15. doublyLinkedList.cpp  15. doublyLinkedList.hpp
Snippets/16. stack parallel array/: 16. stack_pa.c  16. stack_pa.h
Snippets/16. stackPA/: 16. stackPA.cpp  16. stackPA.hpp
Snippets/17. queue linked list/: 17. queue_ll.c  17. queue_ll.h
Snippets/17. queueL/: 17. queueL.cpp  17. queueL.hpp
Snippets/18. tree traversal/: 18. treeTraversal.c  18. treeTraversal.h
Snippets/18. tree traversals/: 18. treeTraversals.cpp  18. treeTraversals.hpp  18. tree_traversals.c  18. tree_traversals.h
Snippets/18a. parse tree/: 18a. parse_tree.c  18a. parse_tree.h
Snippets/18b. binary tree rs/: 18b. binary_tree_rs.c  18b. binary_tree_rs.h
Snippets/19. fibonacci/: 19. fibonacci.c  19. fibonacci.cpp  19. fibonacci.h  19. fibonacci.hpp
Snippets/20. ruler/: 20. ruler.c  20. ruler.cpp  20. ruler.h  20. ruler.hpp
Snippets/21. fractal/: 21. fractal.c  21. fractal.cpp  21. fractal.h  21. fractal.hpp
Snippets/22. recursion removal/: 22. recursionRemoval.cpp  22. recursionRemoval.hpp  22. recursionRemovalInOrder.c  22. recursionRemovalInOrder.cpp  22. recursionRemovalInOrder.h  22. recursionRemovalInOrder.hpp  22. recursionRemovalPostOrder.c  22. recursionRemovalPostOrder.cpp  22. recursionRemovalPostOrder.h  22. recursionRemovalPostOrder.hpp  22. recursionRemovalPreOrder.c  22. recursionRemovalPreOrder.cpp  22. recursionRemovalPreOrder.h  22. recursionRemovalPreOrder.hpp  22. recursion_removal.c  22. recursion_removal.h  22. recursion_removal_inorder.c  22. recursion_removal_inorder.h  22. recursion_removal_preorder.c  22. recursion_removal_preorder.h
Snippets/23. sort/: 23. dcount.cpp  23. dcount.hpp  23. insSort.cpp  23. insSort.hpp  23. qsort.cpp  23. qsort.hpp  23. shellSort.cpp  23. shellSort.hpp  23. sort.cpp  23. sort.hpp  23. sort3.cpp  23. sort3.hpp  23. sort4.cpp  23. sort4.hpp
Snippets/Includes/: node.c  tree_node.c
(+78 files in other folders)
